# tianpeng

./: .env.template  .gitignore  .prettierignore  .yarnrc.yml  README.md  SECURITY.md  package.json  pyproject.toml
.github/workflows/: codeql.yml
.husky/: pre-commit
camelbell/finetune/: main.py
configs/postgres/: docker-compose.yml
dataset/: README.md
docs/: SETUP_DEVENV.md
run_config/: Llama_config.json  lora_hyperparams_llama.json
src/: image_handler.py  runner.py
tianpeng/app/: image_handler.py  main.py  pdf_handler.py  pg_vector.py  pg_vector_util.py  runner.py  util.py
tianpeng/finetune/: llama_flash_attn_monkey_patch.py  main.py
tools/: alpaca_dataset_converter.py  baize_dataset_converter.py  epub2txt.py  merge_datasets.py  sharegpt_dataset_converter.py  song_ci_converter.py  tang_poems_converter.py  translation2019_dataset_converter.py
train_config/: Llama_config.json  lora_hyperparams_llama.json
