[tool.pdm]
[tool.pdm.dev-dependencies]
lint = [
    "black>=23.3.0",
    "ruff>=0.0.261",
]

[project]
name = "tianpeng"
version = "0.1.0"
description = "Fine-tuning and Inference Pipeline based on LLaMA, and Multi-modal Chatbot implementation based on it."
authors = [
    {name = "Pleisto Inc", email = "engineering@pleisto.com"},
]
dependencies = [
    "gradio>=3.24.1",
    "torch==1.13.1",
    "langchain==0.0.134",
    "openai",
    "transformers @ git+https://github.com/huggingface/transformers.git",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPL-3"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
target-version = ["py310"]
line-length = 120


[tool.ruff]
target-version = "py310"
line-length = 120
