[tool.pdm]
[tool.pdm.dev-dependencies]
lint = [
    "black>=23.3.0",
    "ruff>=0.0.261",
]

[project]
name = "tianpeng"
version = "0.1.0"
description = "Fine-tuning and Inference Pipeline based on LLaMA, and Multi-modal Chatbot implementation based on it."
authors = [
    {name = "Pleisto Inc", email = "engineering@pleisto.com"},
]
dependencies = [
    "gradio>=3.24.1",
    "torch==1.13.1",
    "langchain==0.0.134",
    "openai",
    "transformers @ git+https://github.com/huggingface/transformers.git",
    "peft @ git+https://github.com/huggingface/peft.git",
    "datasets>=2.11.0",
    "accelerate>=0.18.0",
    "deepspeed>=0.8.3",
    "bitsandbytes>=0.37.2",
    "sentencepiece>=0.1.97",
    "wandb>=0.14.2",
    "einops>=0.6.0",
    "opencv-python>=4.7.0.72",
    "uvicorn>=0.21.1",
    "python-dotenv>=1.0.0",
    "psycopg2>=2.9.6",
    "PyPDF2>=3.0.1",
    "pgvector",
]
requires-python = ">=3.8.1"
readme = "README.md"
license = {text = "GPL-3"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
target-version = ["py38"]
line-length = 120


[tool.ruff]
target-version = "py38"
line-length = 120
